// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NatGridItem component Properties of NatGridItem Should render NatGridItem component  1`] = `
<View
  accessibilityLabel="descrição"
  accessible={true}
  square={true}
  style={
    Array [
      Object {
        "height": 200,
        "marginBottom": 24,
        "marginLeft": 12,
        "marginRight": 12,
        "width": 152,
      },
    ]
  }
>
  <Image
    accessibilityLabel="descrição"
    accessibilityRole="image"
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "#",
      }
    }
    square={true}
    style={
      Array [
        Object {
          "borderRadius": 6,
          "height": 152,
          "marginBottom": 8,
          "width": 152,
        },
      ]
    }
  />
  <View
    accessibilityLabel="descrição"
    square={true}
    style={
      Array [
        Object {
          "height": 40,
          "lineHeight": 22,
          "width": 152,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#777777",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "textAlign": "center",
          },
        ]
      }
    >
      descrição
    </Text>
  </View>
</View>
`;

exports[`NatGridItem component Should render NatGridItem component  1`] = `
<View
  accessibilityLabel="Texto"
  accessible={true}
  square={true}
  style={
    Array [
      Object {
        "height": 200,
        "marginBottom": 24,
        "marginLeft": 12,
        "marginRight": 12,
        "width": 152,
      },
    ]
  }
>
  <Image
    accessibilityLabel="Texto"
    accessibilityRole="image"
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "#",
      }
    }
    square={true}
    style={
      Array [
        Object {
          "borderRadius": 6,
          "height": 152,
          "marginBottom": 8,
          "width": 152,
        },
      ]
    }
  />
  <View
    accessibilityLabel="Texto"
    square={true}
    style={
      Array [
        Object {
          "height": 40,
          "lineHeight": 22,
          "width": 152,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#777777",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "textAlign": "center",
          },
        ]
      }
    >
      Texto
    </Text>
  </View>
</View>
`;
